# audio-transcode-watcher

./: .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  README.md  config.example.yaml  music_sync.py  pyproject.toml  verify_sync.py
.github/workflows/: dockerhub-description.yml  release.yml  tests.yml
docs/: ROADMAP.md
src/audio_transcode_watcher/: __init__.py  config.py  encoder.py  lyrics.py  main.py  sync.py  utils.py  watcher.py
tests/: __init__.py  conftest.py  test_config.py  test_encoder.py  test_lyrics.py  test_main.py  test_sync.py  test_utils.py  test_watcher.py
tools/: verify_sync.py
