[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "audio-transcode-watcher"
version = "0.4.0"
description = "Watch a source folder and automatically transcode audio files to multiple formats"
readme = "README.md"
license = "GPL-3.0-or-later"
requires-python = ">=3.14"
authors = [
    { name = "GeiserX" }
]
keywords = ["audio", "transcode", "ffmpeg", "flac", "mp3", "aac", "alac", "watchdog"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
    "Topic :: Multimedia :: Sound/Audio :: Conversion",
]
dependencies = [
    "watchdog>=4.0.0",
    "pyyaml>=6.0",
    "mutagen>=1.47.0",
    "syncedlyrics>=1.0.0",
    "openai-whisper>=20240930",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.12.0",
]

[project.scripts]
audio-transcode-watcher = "audio_transcode_watcher.main:main"

[project.urls]
Homepage = "https://github.com/GeiserX/audio-transcode-watcher"
Repository = "https://github.com/GeiserX/audio-transcode-watcher"
Issues = "https://github.com/GeiserX/audio-transcode-watcher/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/audio_transcode_watcher"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=audio_transcode_watcher --cov-report=term-missing"

[tool.coverage.run]
source = ["src/audio_transcode_watcher"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]
